Update intro statement to reflect that many users will get guidance + examples

--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -20,7 +20,7 @@
   meets our requirements. We’ll work with you to find the best domain for your
   organization.</p>
 
-  <p>Here are a few domain examples for your type of organization.</p>
+  <p>Here are domain examples and more guidance for your type of organization.</p>
   <div class="domain_example">
     {% include "includes/domain_example.html" %}
   </div>
