Tidy up thank you page

--- a/src/registrar/templates/application_done.html
+++ b/src/registrar/templates/application_done.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Thank you for your domain request{% endblock %}
+{% block title %}Thanks for your domain request!{% endblock %}
 
 {% block content %}
 <main id="main-content" class="grid-container register-form-step">
@@ -14,7 +14,7 @@
         />
     <h1>Thank you</h1>
   </span>
-  <p> Thank you for your domain request. We'll email a copy of your request to you,
+  <p>We'll email a copy of your request to you,
   your authorizing official, and any contacts you added.</p>
 
   <h2>Next steps in this process</h2>
