Removed reference to managing a domain

--- a/src/registrar/templates/application_your_contact.html
+++ b/src/registrar/templates/application_your_contact.html
@@ -2,8 +2,7 @@
 {% load field_helpers %}
 
 {% block form_instructions %}
-  <p> We’ll use the following information to contact you about your domain request and,
-  once your request is approved, about managing your domain.</p>
+  <p>We’ll use this information to contact you about your domain request.</p>
 
   <p>If you’d like us to use a different name, email, or phone number you can make those
   changes below. Changing your contact information here won’t affect your login.gov
