--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -38,7 +38,7 @@
 
   <fieldset class="usa-fieldset">
     <legend>
-      <h2>What .gov domain do you want?</h2>
+      <h2>What .gov domain do you want? <abbr class="usa-hint usa-hint--required" title="required">*</abbr></h2>
     </legend>
 
     <p id="domain_instructions">After you enter your domain, we’ll make sure it’s
@@ -46,7 +46,7 @@
     these initial checks, we’ll verify that it meets all of our requirements once you
     complete and submit the rest of this form.</p>
 
-    <p class="text-semibold">This question is required.</p>
+    <p class="text-semibold"><abbr class="usa-hint usa-hint--required" title="required">*</abbr> This question is required.</p>
 
     {% with attr_aria_describedby="domain_instructions domain_instructions2" %}
       {# attr_validate / validate="domain" invokes code in get-gov.js #}
