--- a/src/registrar/templates/application_org_federal.html
+++ b/src/registrar/templates/application_org_federal.html
@@ -3,14 +3,12 @@
 
 {% block form_instructions %}
   <h2 class="margin-bottom-05">
-    Which federal branch is your organization in?
+    Which federal branch is your organization in? <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
   </h2>
-
-  <p class="text-semibold">This question is required.</p>
 {% endblock %}
 
 {% block form_required_fields_help_text %}
-{# commented out so it does not appear on this page #}
+<p class="text-semibold"><abbr class="usa-hint usa-hint--required" title="required">*</abbr> This question is required.</p>
 {% endblock %}
 
 
