--- a/src/registrar/templates/application_org_type.html
+++ b/src/registrar/templates/application_org_type.html
@@ -3,14 +3,13 @@
 
 {% block form_instructions %}
   <h2 class="margin-bottom-05">
-    What kind of U.S.-based government organization do you represent?
+    What kind of U.S.-based government organization do you represent? <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
   </h2>
 
-  <p class="text-semibold">This question is required.</p>
 {% endblock %}
 
 {% block form_required_fields_help_text %}
-{# commented out so it does not appear on this page #}
+<p class="text-semibold"><abbr class="usa-hint usa-hint--required" title="required">*</abbr> This question is required.</p>
 {% endblock %}
 
 
