--- a/src/registrar/templates/application_form.html
+++ b/src/registrar/templates/application_form.html
@@ -70,12 +70,18 @@
               class="usa-button"
             >Submit your domain request</button>
             {% endif %}
+            {% comment %}
+            Commenting this section as we are "removing"
+            the save progress button for now. 
+            If confirmed to remove this, please reivist and
+            remove in application.py "if button == "save":"
             <button 
               type="submit"
               name="submit_button"
               value="save"
               class="usa-button usa-button--outline"
             >Save progress</button>
+            {% endcomment %}
           </div>
 {% endblock %}
 
