--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -16,7 +16,41 @@
 
   <section class="dashboard tablet:grid-col-11 desktop:grid-col-10">
     <h2>Registered domains</h2>
+    {% if domains %}
+    <table class="usa-table usa-table--borderless usa-table--stacked">
+      <caption class="sr-only">Your domain applications</caption>
+      <thead>
+        <tr>
+          <th data-sortable scope="col" role="columnheader">Domain name</th>
+          <th data-sortable scope="col" role="columnheader">Date created</th>
+          <th data-sortable scope="col" role="columnheader">Status</th>
+          <th scope="col" role="columnheader"><span class="usa-sr-only">Action</span></th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for domain in domains %}
+        <tr>
+          <th th scope="row" role="rowheader" data-label="Domain name">
+            {{ domain.name }}
+          </th>
+          <td data-sort-value="{{ domain.created_time|date:"U" }}" data-label="Date created">{{ domain.created_time|date }}</td>
+          <td data-label="Status">{{ domain.application_status|title }}</td>
+          <td>
+            <a href="{% url "todo" %}">
+              Edit <span class="usa-sr-only">{{ domain.name }} </span>
+            </a>
+          </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    <div
+      class="usa-sr-only usa-table__announcement-region"
+      aria-live="polite"
+    ></div>
+    {% else %}
     <p>You don't have any registered domains yet</p>
+    {% endif %}
   </section>
 
   <section class="dashboard tablet:grid-col-11 desktop:grid-col-10">
