--- a/src/registrar/templates/application_sidebar.html
+++ b/src/registrar/templates/application_sidebar.html
@@ -6,16 +6,18 @@
     {% for this_step in steps.all %}
       {% if this_step in visited %}
       <li class="usa-sidenav__item">
+        <span>
         <a href="{% namespaced_url 'application' this_step %}" 
            {% if this_step == steps.current %}class="usa-current"{% endif%}>
            {% if not this_step == steps.current %}
            <svg class="usa-icon text-green" aria-hidden="true" focsuable="false" role="img" width="24" height="24">
-             <title id="locked-step__{{forloop.counter}}">Checked mark</title>
+             <title id="checked-step__{{forloop.counter}}">Checked mark</title>
              <use xlink:href="{%static 'img/sprite.svg'%}#check_circle"></use>
            </svg>
            {% endif %}
           {{ form_titles|get_item:this_step }}
         </a>
+      </span>
       {% else %}
         <li class="usa-sidenav__item sidenav__step--locked">
           <span>
