--- a/src/registrar/templates/application_sidebar.html
+++ b/src/registrar/templates/application_sidebar.html
@@ -5,16 +5,20 @@
     <ul class="usa-sidenav">
     {% for this_step in steps.all %}
       {% if this_step in visited %}
-      <li class="usa-sidenav__item">
+      <li class="usa-sidenav__item sidenav__step--locked">
         <span>
+          {% if not this_step == steps.current %}
+          <svg class="usa-icon text-green" aria-hidden="true" focsuable="false" role="img" width="24" height="24">
+            <title id="checked-step__{{forloop.counter}}">Checked mark</title>
+            <use xlink:href="{%static 'img/sprite.svg'%}#check_circle"></use>
+          </svg>
+          {% endif %}
         <a href="{% namespaced_url 'application' this_step %}" 
-           {% if this_step == steps.current %}class="usa-current"{% endif%}>
-           {% if not this_step == steps.current %}
-           <svg class="usa-icon text-green" aria-hidden="true" focsuable="false" role="img" width="24" height="24">
-             <title id="checked-step__{{forloop.counter}}">Checked mark</title>
-             <use xlink:href="{%static 'img/sprite.svg'%}#check_circle"></use>
-           </svg>
-           {% endif %}
+           {% if this_step == steps.current %}
+           class="usa-current"
+           {% else %}
+           class="usa-checked"
+           {% endif%}>
           {{ form_titles|get_item:this_step }}
         </a>
       </span>
