--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -36,8 +36,8 @@
           <td data-sort-value="{{ domain.created_time|date:"U" }}" data-label="Date created">{{ domain.created_time|date }}</td>
           <td data-label="Status">{{ domain.application_status|title }}</td>
           <td>
-            <a href="{% url "todo" %}">
-              Edit <span class="usa-sr-only">{{ domain.name }} </span>
+            <a href="{% url "domain" pk=domain.pk %}">
+                Edit <span class="usa-sr-only">{{ domain.name }}</span>
             </a>
           </td>
         </tr>
