Jon note: DO A HARD RESET

--- a/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
@@ -131,6 +131,12 @@ a.breadcrumb__back {
   }
 }
 
+span {
+  a.link_usa-checked {
+    padding: 0 !important;
+  }
+}
+
 .sidenav__step--locked {
   color: color('base-darker');
   span {
@@ -145,6 +151,7 @@ a.breadcrumb__back {
     }
   }
 }
+
 
 .stepnav {
   margin-top: units(2);
