--- a/src/registrar/templates/application_sidebar.html
+++ b/src/registrar/templates/application_sidebar.html
@@ -17,7 +17,7 @@
            {% if this_step == steps.current %}
            class="usa-current"
            {% else %}
-           class="usa-checked"
+           class="link_usa-checked"
            {% endif%}>
           {{ form_titles|get_item:this_step }}
         </a>
