found a workaround that doesnt need to use important flag in sass

--- a/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
@@ -131,9 +131,13 @@ a.breadcrumb__back {
   }
 }
 
-span {
-  a.link_usa-checked {
-    padding: 0 !important;
+.usa-sidenav {
+  .usa-sidenav__item {
+    span {
+      a.link_usa-checked {
+        padding: 0;
+      }
+    }    
   }
 }
 
