Add more context about current domains being used

--- a/src/registrar/templates/application_current_sites.html
+++ b/src/registrar/templates/application_current_sites.html
@@ -3,7 +3,8 @@
 
 {% block form_instructions %}
   <p>Enter your organization’s current public website, if you have one. For example,
-  www.city.com.</p>
+  www.city.com. We can better evaluate your domain request if we know about domains 
+you’re already using. If you already have any .gov domains please include them.</p>
 {% endblock %}
 
 {% block form_required_fields_help_text %}
