RM reference to emailing other contacts

--- a/src/registrar/templates/application_done.html
+++ b/src/registrar/templates/application_done.html
@@ -12,10 +12,9 @@
         alt="Check mark confirming submission"
         width="56"
         />
-    <h1>Thank you</h1>
+    <h1>Thanks for your domain request!</h1>
   </span>
-  <p>We'll email a copy of your request to you,
-  your authorizing official, and any contacts you added.</p>
+  <p>We'll email a copy of your request to you.</p>
 
   <h2>Next steps in this process</h2>
 
