--- a/src/registrar/templates/application_done.html
+++ b/src/registrar/templates/application_done.html
@@ -18,7 +18,7 @@
 
   <h2>Next steps in this process</h2>
 
-  <p> We'll review your request. This could take up to two weeks. During
+  <p> We'll review your request. This usually takes 20 business days. During
   this review we'll verify that your:</p> 
   <ul class="usa-list">
     <li>Organization is eligible for a .gov domain</li>
