Mr/request form edits (#465)
* Update "current website" text

* Update tribal gov text about needing more info

* Add more context about current domains being used

* RM text saying we'll email other contacts about the request

* RM reference to emailing other contacts

* Fix linter and test failures

* Updated wait time to 20 business days

---------

Co-authored-by: Seamus Johnston <seamus.johnston@gsa.gov>

--- a/src/registrar/templates/application_done.html
+++ b/src/registrar/templates/application_done.html
@@ -12,14 +12,13 @@
         alt="Check mark confirming submission"
         width="56"
         />
-    <h1>Thank you</h1>
+    <h1>Thanks for your domain request!</h1>
   </span>
-  <p>We'll email a copy of your request to you,
-  your authorizing official, and any contacts you added.</p>
+  <p>We'll email a copy of your request to you.</p>
 
   <h2>Next steps in this process</h2>
 
-  <p> We'll review your request. This could take up to two weeks. During
+  <p> We'll review your request. This usually takes 20 business days. During
   this review we'll verify that your:</p> 
   <ul class="usa-list">
     <li>Organization is eligible for a .gov domain</li>
