--- a/src/registrar/templates/domain_detail.html
+++ b/src/registrar/templates/domain_detail.html
@@ -9,6 +9,13 @@
   <h1>{{ domain.name }}</h1>
 
   <p>Active: {% if domain.is_active %}Yes{% else %}No{% endif %}</p>
+
+  <h2>Users</h2>
+  <ul>
+  {% for user in domain.users.all %}
+  <li>{{ user }} &lt;{{ user.email }}&gt;</li>
+  {% endfor %}
+  </ul>
 </div>
 </main>
 {% endblock %}  {# content #}
