--- a/src/registrar/templates/domain_base.html
+++ b/src/registrar/templates/domain_base.html
@@ -1,4 +1,4 @@
-{% extends "dashboard_base.html" %}
+{% extends "base.html" %}
 
 {% block title %}Domain {{ domain.name }}{% endblock %}
 
@@ -12,9 +12,9 @@
     <div class="grid-col-9">
       <main id="main-content" class="grid-container">
 
+	  {% block domain_content %}
 	  <h1>Domain {{ domain.name }}</h1>
 
-	  {% block domain_content %}
 	  {% endblock %}  {# domain_content #}
 
 	  </main>
