Fix liniting errors

--- a/src/registrar/templates/domain_sidebar.html
+++ b/src/registrar/templates/domain_sidebar.html
@@ -51,7 +51,7 @@
       <li class="usa-sidenav__item">
         {% url 'domain-users' pk=domain.id as url %}
         <a href="{{ url }}"
-          {% if request.path == url %}class="usa-current"{% endif %}
+          {% if request.path|startswith:url %}class="usa-current"{% endif %}
         >
             User management
         </a>
