--- a/src/registrar/templates/domain_users.html
+++ b/src/registrar/templates/domain_users.html
@@ -4,6 +4,13 @@
 {% block title %}User management{% endblock %}
 
 {% block domain_content %}
+  <p><a href="{% url 'home' %}">
+    <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
+    <use xlink:href="{% static 'img/sprite.svg' %}#arrow_back"></use>
+    </svg>
+    Back to manage your domains
+  </a></p>
+
   <h1>User management</h1>
 
   {% if domain.permissions %}
