Place table styling outside of dashboard, update class names for tables

--- a/src/registrar/templates/domain_users.html
+++ b/src/registrar/templates/domain_users.html
@@ -6,7 +6,7 @@
   <h1>User management</h1>
 
   {% if domain.permissions %}
-  <table class="dotgov-table usa-table usa-table--borderless usa-table--stacked">
+  <table class="usa-table usa-table--borderless usa-table--stacked dotgov-table--stacked dotgov-table">
       <caption class="sr-only">Domain users</caption>
       <thead>
         <tr>
