Remove word domain from h1, allow domains names to wrap
Signed-off-by: igorkorenfeld <52677065+igorkorenfeld@users.noreply.github.com>

--- a/src/registrar/templates/domain_base.html
+++ b/src/registrar/templates/domain_base.html
@@ -40,7 +40,7 @@
 
       {% block domain_content %}
 
-      <h1>Domain {{ domain.name }}</h1>
+      <h1 class="break-word">{{ domain.name }}</h1>
 
       {% endblock %}  {# domain_content #}
 
