fix home.html to redirect to forms if status set to started

--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -2,6 +2,7 @@
 
 {% block title %}Apply for a .gov domain – Status{% endblock %}
 {% load static url_helpers %}
+{% content %}
 
 {% block form_fields %}
   {% for step in steps.all|slice:":-1" %}
@@ -99,4 +100,5 @@
     </div>
   </section>
   {% endfor %}
+{% endblock %}
 {% endblock %}
