Change title block on base form, add image on review

--- a/src/registrar/templates/application_form.html
+++ b/src/registrar/templates/application_form.html
@@ -41,7 +41,9 @@
         {% endfor %}
 {% endblock %}
 
+{% block form_page_title %}
         <h1> {{form_titles|get_item:steps.current}} </h1>
+{% endblock %}
 
 {% block form_instructions %}
 {% endblock %}
