--- a/src/registrar/templates/application_form.html
+++ b/src/registrar/templates/application_form.html
@@ -69,7 +69,7 @@
             {% else %}
             <button
               type="submit"
-              class="usa-button"
+              class="usa-button usa-button--big dotgov-button--green"
             >Submit your domain request</button>
             {% endif %}
           </div>
