Remove non-breaking space, limit title width

--- a/src/registrar/templates/application_review.html
+++ b/src/registrar/templates/application_review.html
@@ -6,14 +6,14 @@
 {% endblock %}
 
 {% block form_page_title %}
-  <span class="display-flex flex-align-start" > 
+  <span class="display-flex flex-align-start maxw-mobile-lg"> 
     <img 
         class= "margin-right-105" 
         src="{%static 'img/registrar/dotgov_review_magnify.svg' %}" 
         alt=""
         width="72"
         />
-    <h1> Review and submit your domain&nbsp;request </h1>
+    <h1> Review and submit your domain request </h1>
   </span>
 {% endblock %}
 
