Make required asterisk superscript and non-breaking

--- a/src/registrar/templates/application_org_federal.html
+++ b/src/registrar/templates/application_org_federal.html
@@ -3,7 +3,7 @@
 
 {% block form_instructions %}
   <h2 class="margin-bottom-05">
-    Which federal branch is your organization in? <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+    Which federal branch is your organization&nbsp;in?&nbsp;<abbr class="usa-hint usa-hint--required text-super" title="required">*</abbr>
   </h2>
 {% endblock %}
 
