--- a/src/registrar/templates/application_org_type.html
+++ b/src/registrar/templates/application_org_type.html
@@ -3,7 +3,7 @@
 
 {% block form_instructions %}
   <h2 class="margin-bottom-05">
-    What kind of U.S.-based government organization do you represent? <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+    What kind of U.S.-based government organization do you represent? <abbr class="usa-hint usa-hint--required text-super" title="required">*</abbr>
   </h2>
 
 {% endblock %}
