--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -38,7 +38,8 @@
 
   <fieldset class="usa-fieldset">
     <legend>
-      <h2>What .gov domain do you want? <abbr class="usa-hint usa-hint--required" title="required">*</abbr></h2>
+      <h2>What .gov domain do you want?&nbsp;<abbr class="usa-hint usa-hint--required
+          text-super" title="required">*</abbr></h2>
     </legend>
 
     <p id="domain_instructions">After you enter your domain, we’ll make sure it’s
