--- a/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
@@ -202,6 +202,9 @@ a.breadcrumb__back {
   margin-bottom: units(0.5);
 }
 
+.usa-form .usa-button {
+  margin-top: units(3);
+}
 
 /** ---- DASHBOARD ---- */
 
