--- a/src/registrar/templates/domain_users.html
+++ b/src/registrar/templates/domain_users.html
@@ -38,7 +38,7 @@
     </svg><span class="margin-left-05">Add another user</span>
   </a>
 
-  {% if domain.invitations.all %}
+  {% if domain.invitations.exists %}
   <h2>Invitations</h2>
   <table class="usa-table usa-table--borderless usa-table--stacked dotgov-table--stacked dotgov-table">
       <caption class="sr-only">Domain invitations</caption>
