--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -7,7 +7,7 @@
 <div class="grid-container">
  
 
-<p>Domain request for domain name</p>
+<p>Domain request for {{ domainapplication.requested_domain.name }}</p>
 
 <p>{% include "includes/domain_application.html" %}</p>
 
