--- a/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
@@ -229,6 +229,8 @@ section.dashboard {
   margin-top: units(3);
 
   h2 {
+    color: color('primary-dark');
+    margin-top: units(2);
     margin-bottom: units(2);
   }
 
@@ -240,7 +242,7 @@ section.dashboard {
     margin-top: units(5);
 
     h2 {
-      margin-bottom: units(3);
+      margin-bottom: 0;
     }
   }
 }
@@ -267,6 +269,10 @@ section.dashboard {
 
   th[data-sortable]:not([aria-sort]) .usa-table__header__button {
     right: auto;
+  }
+
+  tbody th {
+    word-break: break-word;
   }
 }
 
@@ -300,6 +306,8 @@ section.dashboard {
 @include at-media(mobile-lg) {
 
   .dotgov-table {
+    margin-top: units(1);
+
     tr {
       border: none;
     }
@@ -319,10 +327,6 @@ section.dashboard {
       }
     }
     
-    tbody th {
-      word-break: break-word;
-    }
-
     td, th,
     .usa-tabel th{
       padding: units(2) units(2) units(2) 0;
