--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -15,13 +15,13 @@
   aria-labelledby="summary-box-key-information"
   summary-box-background-color="gray-90"
 >
-<div class="usa-summary-box__body">
+<div class="usa-summary-box__body" style="display:inline-table;">
   <h3 class="usa-summary-box__heading" id="summary-box-key-information">
     Status:
   </h3>
   {% if domainapplication.status == 'approved' %} Approved 
   {% elif domainapplication.status == 'investigating' %} In Review 
-  {% elif domainapplication.status == 'submitted' %} Submitted
+  {% elif domainapplication.status == 'submitted' %} Received
   {% else %}ERROR Please contact technical support/dev
   {% endif %}
   </div></div>
@@ -29,7 +29,7 @@
 
 <p>{% include "includes/domain_application.html" %}</p>
 
-<p>withdraw</p>
+<p><button type="" class="usa-button usa-button--outline withdraw_outline">Withdraw Request</button></p>
 
 <p>Summary of request</p> 
 
