--- a/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
@@ -131,6 +131,11 @@ a.breadcrumb__back {
   }
 }
 
+.withdraw_outline {
+  box-shadow: inset 0 0 0 2px #C41230;
+  color: #C41230;
+}
+
 .usa-sidenav {
   .usa-sidenav__item {
     span {
